# Automated-Receptionist

./: .cursorignore  .gitignore  .hintrc  LICENSE  README.md  clean_cache.py  config_defaults  env.config.example  install_build_dependencies.bat  install_build_dependencies.sh  installer_id.txt  main.py  pyproject.toml  requirements.txt  version.json  voice-agent-server.spec
agents/: banya.py  myagent.py
demo/: mock_browser_responses.json  mock_contacts.json
server/: __init__.py  agent_manager.py  api.py  config_ui.py
services/: agent_code_service.py  call_logger.py  config_loader.py  config_service.py  daily_summary_service.py  file_registry.py  firebase_service.py  google_sheets.py  log_manager.py  path_utils.py
services/browser_automation/: CHROME_LAUNCHER.md  README.md  __init__.py  browser_service.py  chrome_launcher.py  file_loader.py  login_service.py  mock_browser_data.py  portfolio_service.py  profile_service.py
services/browser_automation/test/: function_tool_template.py  service_template.py  temp.py  test_browser_service_login.py  test_fill_login_form.py  test_login_service.py
tests/: test_agent.py  test_google_signup_utils.py
ui/: app.js  index.html  styles.css
ui/sections/: call-history.html  credits.html  dashboard.html  help.html  instructions.html  modules.html
voice_agent_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
